force-app/main/default/objects/bpats__ASM_Skill__c/bpats__ASM_Skill__c.object-meta.xml
<CustomObject>
    <label>Skill</label>
    <nameField>
        <displayFormat>SKL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>