force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Auth__c.field-meta.xml
<CustomField>
    <fullName>bpats__Auth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth</label>
    <type>Checkbox</type>
</CustomField>