force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Contact__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>ASM_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>