force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Description__c.field-meta.xml
<CustomField>
    <fullName>bpats__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>