force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Job__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>bpats__Job__c</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>ASM_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>