force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Last_Used__c.field-meta.xml
<CustomField>
    <fullName>bpats__Last_Used__c</fullName>
    <label>Last Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>