force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Skill_Alias_Array__c.field-meta.xml
<CustomField>
    <fullName>bpats__Skill_Alias_Array__c</fullName>
    <label>Skill Alias Array</label>
    <type>TextArea</type>
</CustomField>