force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>bpats__Skill_Level__c</fullName>
    <label>Skill Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>