force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Skill_Name__c</fullName>
    <label>Skill Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>