force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Skill_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>bpats__Skill_Proficiency__c</fullName>
    <label>Skill Proficiency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>