force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Type__c</fullName>
    <label>Type</label>
    <type>TextArea</type>
</CustomField>