force-app/main/default/objects/bpats__ASM_Skill__c/fields/bpats__Value__c.field-meta.xml
<CustomField>
    <fullName>bpats__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>